SM 20230716 Added Account Repository

--- a/SMBlog.Web/appsettings.json
+++ b/SMBlog.Web/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {    
+      "DefaultConnection": "Datasource=localhost;Initial Catalog=BlogDB;User ID=admin;Integrated Security=true"
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
 }
