SM 20230722 Added PhotoService

--- a/SMBlog.Web/appsettings.json
+++ b/SMBlog.Web/appsettings.json
@@ -2,11 +2,16 @@
   "ConnectionStrings": {    
       "DefaultConnection": "Datasource=localhost;Initial Catalog=BlogDB;User ID=admin;Integrated Security=true"
     },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "CloudinaryOptions": {
+    "CloudName": "something",
+    "ApiKey": "something",
+    "ApiSecret":  "something"
+  },
     "AllowedHosts": "*"
 }
