--- a/SMBlog.Web/SMBlog.Web.csproj
+++ b/SMBlog.Web/SMBlog.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,6 +8,13 @@
 
   <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SMBlog.Identity\SMBlog.Identity.csproj" />
+    <ProjectReference Include="..\SMBlog.Models\SMBlog.Models.csproj" />
+    <ProjectReference Include="..\SMBlog.Repository\SMBlog.Repository.csproj" />
+    <ProjectReference Include="..\SMBlog.Services\SMBlog.Services.csproj" />
   </ItemGroup>
 
 </Project>
