--- a/SMBlog.Web/appsettings.json
+++ b/SMBlog.Web/appsettings.json
@@ -8,6 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "something",
+    "Issuer":  "http://localhost:5000"
+  },
   "CloudinaryOptions": {
     "CloudName": "something",
     "ApiKey": "something",
