SM 20230723 Fixed a few errors.

--- a/SMBlog.Web/appsettings.json
+++ b/SMBlog.Web/appsettings.json
@@ -9,13 +9,13 @@
     }
   },
   "Jwt": {
-    "Key": "something",
-    "Issuer":  "http://localhost:5000"
+    "Key": "^d@aQpd$7X8yTzRCjcRE&tEnu6J%DUUzuM9YMLuVJC$RMN2q^!Uf7Ryr?3rHdS?=s+$6A4yj6wyA9WcChQ$tq-t4fW#&FYd#5Y@M%mv25A4eA5$RC$?dWHE9qe83$?RmZ!BkBnk!DaHH5T?pdL*+%vGpHtY&5_qkm#^PsXyH5pn*6?G&CrRHGBW8$YW&^r#AW^PTE$RsJee&gjfES2*#XZq3BekhN9AJXLGQDUEhH*v*N-ThxRj&EFFRsbETzuzp",
+    "Issuer": "http://localhost:5000"
   },
   "CloudinaryOptions": {
-    "CloudName": "something",
-    "ApiKey": "something",
-    "ApiSecret":  "something"
+    "CloudName": "dzjfuaucf",
+    "ApiKey": "649778985826784",
+    "ApiSecret": "CDRiX0e1vDMMRg4tzGiee7p4JFQ"
   },
     "AllowedHosts": "*"
 }
