--- a/SMBlog.Web/appsettings.json
+++ b/SMBlog.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {    
-      "DefaultConnection": "Datasource=localhost;Initial Catalog=BlogDB;User ID=admin;Integrated Security=true"
+      "DefaultConnection": "Data Source=localhost;Initial Catalog=BlogDB;User ID=admin;Integrated Security=true"
     },
   "Logging": {
     "LogLevel": {
